test/files/neg/report-deprecated-error.check
report-deprecated-error.scala:34: error: method <<= is removed; use := syntax instead (foo-lib 1.0)
  <<=()
  ^
report-deprecated-error.scala:36: warning: should DSL is incubating, and future compatibility is not guaranteed
  "bar" should {
  ^
1 warning
1 error
